--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+data_dir = ../frontend/dist
+
 [env]
 framework = arduino
 check_skip_packages = yes
