--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "lint": "eslint --ext .vue,.js,.jsx,.cjs,.mjs --ignore-path .gitignore src/",
+    "lint:fix": "npm run lint -- --fix",
+    "lint:report": "npm run lint -- --output-file eslint_report.json --format json"
   },
   "dependencies": {
     "pinia": "^2.0.36",
