fw: Use esphome ESPAsyncWebServer

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -15,7 +15,7 @@ data_dir = ../frontend/dist
 framework = arduino
 check_skip_packages = yes
 lib_deps =
-    me-no-dev/ESP Async WebServer
+    esphome/ESPAsyncWebServer-esphome
 board_build.filesystem = littlefs
 
 [env:esp32dev]
@@ -23,5 +23,4 @@ platform = espressif32
 board = esp32dev
 lib_deps =
     ${env.lib_deps}
-    arduino-libraries/WiFi
-    me-no-dev/AsyncTCP
+    esphome/AsyncTCP-esphome
