fw: We'll need ArduinoJson

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -16,6 +16,7 @@ framework = arduino
 check_skip_packages = yes
 lib_deps =
     esphome/ESPAsyncWebServer-esphome
+    bblanchon/ArduinoJson
 board_build.filesystem = littlefs
 
 [env:esp32dev]
