--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -19,7 +19,7 @@ lib_deps =
     bblanchon/ArduinoJson
 board_build.filesystem = littlefs
 
-[env:esp32dev]
+[env:esp32]
 platform = espressif32
 board = esp32dev
 lib_deps =
