fw: Use specific esp32 board

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -21,7 +21,7 @@ board_build.filesystem = littlefs
 
 [env:esp32]
 platform = espressif32
-board = esp32dev
+board = az-delivery-devkit-v4
 lib_deps =
     ${env.lib_deps}
     esphome/AsyncTCP-esphome
