fw: Add git commit to defines

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -18,6 +18,7 @@ lib_deps =
     esphome/ESPAsyncWebServer-esphome
     bblanchon/ArduinoJson
 board_build.filesystem = littlefs
+build_flags = !echo -e "'-DGIT_COMMIT=\"$(git rev-parse HEAD | cut -c-8)\"'"
 
 [env:esp32]
 platform = espressif32
