fw: Use custom partitions

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -26,3 +26,4 @@ board = az-delivery-devkit-v4
 lib_deps =
     ${env.lib_deps}
     esphome/AsyncTCP-esphome
+board_build.partitions = platforms/esp32/partitions.csv
