fw: Add commented out debugging code

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -27,3 +27,4 @@ lib_deps =
     ${env.lib_deps}
     esphome/AsyncTCP-esphome
 board_build.partitions = platforms/esp32/partitions.csv
+; build_flags = ${env.build_flags} -DCORE_DEBUG_LEVEL=5
