--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,16 @@
     "@vuelidate/validators": "^2.0.2",
     "axios": "^1.4.0",
     "moment": "^2.29.4",
-    "pinia": "^2.0.36",
     "primeflex": "^3.3.0",
-    "primeicons": "^6.0.1",
     "primevue": "^3.29.0",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
