fw: Add NTPClient

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -17,6 +17,7 @@ check_skip_packages = yes
 lib_deps =
     esphome/ESPAsyncWebServer-esphome
     bblanchon/ArduinoJson
+    NTPClient
 board_build.filesystem = littlefs
 build_flags = !echo -e "'-DGIT_COMMIT=\"$(git rev-parse HEAD | cut -c-8)\"'"
 
