fw: Add dev target

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -28,4 +28,12 @@ lib_deps =
     ${env.lib_deps}
     esphome/AsyncTCP-esphome
 board_build.partitions = platforms/esp32/partitions.csv
-; build_flags = ${env.build_flags} -DCORE_DEBUG_LEVEL=5
+
+[env:esp32dev]
+platform = espressif32
+board = az-delivery-devkit-v4
+lib_deps =
+    ${env.lib_deps}
+    esphome/AsyncTCP-esphome
+board_build.partitions = platforms/esp32/partitions.csv
+build_flags = ${env.build_flags} -DCORE_DEBUG_LEVEL=5 -DDEV=true
