--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -18,6 +18,7 @@ lib_deps =
     esphome/ESPAsyncWebServer-esphome
     bblanchon/ArduinoJson
     NTPClient
+    adafruit/Adafruit SHT31 Library
 board_build.filesystem = littlefs
 build_flags = !echo -e "'-DGIT_COMMIT=\"$(git rev-parse HEAD | cut -c-8)\"'"
 
