--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -19,6 +19,7 @@ lib_deps =
     bblanchon/ArduinoJson
     NTPClient
     adafruit/Adafruit SHT31 Library
+    PowerBroker2/ArduPID
 board_build.filesystem = littlefs
 build_flags = !echo -e "'-DGIT_COMMIT=\"$(git rev-parse HEAD | cut -c-8)\"'"
 
