--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -20,6 +20,7 @@ lib_deps =
     NTPClient
     adafruit/Adafruit SHT31 Library
     PowerBroker2/ArduPID
+    SPI
 board_build.filesystem = littlefs
 build_flags = !echo -e "'-DGIT_COMMIT=\"$(git rev-parse HEAD | cut -c-8)\"'"
 
