--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -21,6 +21,7 @@ lib_deps =
     adafruit/Adafruit SHT31 Library
     PowerBroker2/ArduPID
     SPI
+    fbiego/ESP32Time
 board_build.filesystem = littlefs
 build_flags = !echo -e "'-DGIT_COMMIT=\"$(git rev-parse HEAD | cut -c-8)\"'"
 
