--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -22,6 +22,7 @@ lib_deps =
     PowerBroker2/ArduPID
     SPI
     fbiego/ESP32Time
+    PowerBroker2/FireTimer
 board_build.filesystem = littlefs
 build_flags = !echo -e "'-DGIT_COMMIT=\"$(git rev-parse HEAD | cut -c-8)\"'"
 
