fw: platformio: add ota target

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -42,3 +42,12 @@ lib_deps =
     esphome/AsyncTCP-esphome
 board_build.partitions = platforms/esp32/partitions.csv
 build_flags = ${env.build_flags} -DCORE_DEBUG_LEVEL=5 -DDEV=true
+
+[env:esp32dev-ota]
+platform = ${env:esp32dev.platform}
+board = ${env:esp32dev.board}
+lib_deps = ${env:esp32dev.lib_deps}
+board_build.partitions = ${env:esp32dev.board_build.partitions}
+build_flags = ${env:esp32dev.build_flags}
+upload_protocol = espota
+upload_port = snek.local
