--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
     "axios": "^1.4.0",
+    "chartjs-plugin-annotation": "^3.0.1",
     "moment": "^2.29.4",
     "primeflex": "^3.3.0",
     "primevue": "^3.29.0",
