--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -24,7 +24,7 @@ lib_deps =
     fbiego/ESP32Time
     PowerBroker2/FireTimer
 board_build.filesystem = littlefs
-build_flags = !echo -e "'-DGIT_COMMIT=\"$(git rev-parse HEAD | cut -c-8)\"'"
+build_flags = !echo -e "'-DGIT_COMMIT=\"$(git rev-parse HEAD | cut -c-8)\"' '-DVERSION=\"$(cat .version)\"'"
 
 [env:esp32]
 platform = espressif32
@@ -33,6 +33,7 @@ lib_deps =
     ${env.lib_deps}
     esphome/AsyncTCP-esphome
 board_build.partitions = platforms/esp32/partitions.csv
+build_flags = ${env.build_flags}
 
 [env:esp32dev]
 platform = espressif32
