ci: add firmware releaser

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -15,23 +15,23 @@ data_dir = ../frontend/dist
 framework = arduino
 check_skip_packages = yes
 lib_deps =
-    esphome/ESPAsyncWebServer-esphome
-    bblanchon/ArduinoJson
-    NTPClient
+    esphome/ESPAsyncWebServer-esphome@3.0.0
+    bblanchon/ArduinoJson@6.21.2
+    arduino-libraries/NTPClient@3.2.1
     https://github.com/dfrobot/DFRobot_SHT3x.git
-    PowerBroker2/ArduPID
-    SPI
-    fbiego/ESP32Time
-    PowerBroker2/FireTimer
+    PowerBroker2/ArduPID@0.2.0
+    SPI@2.0.0
+    fbiego/ESP32Time@2.0.0
+    PowerBroker2/FireTimer@1.0.5
 board_build.filesystem = littlefs
-build_flags = !echo -e "'-DGIT_COMMIT=\"$(git rev-parse HEAD | cut -c-8)\"' '-DVERSION=\"$(cat .version)\"'"
+build_flags = !python scripts/git_version_macro.py
 
 [env:esp32]
 platform = espressif32
 board = az-delivery-devkit-v4
 lib_deps =
     ${env.lib_deps}
-    esphome/AsyncTCP-esphome
+    esphome/AsyncTCP-esphome@2.0.0
 board_build.partitions = platforms/esp32/partitions.csv
 build_flags = ${env.build_flags}
 
@@ -40,7 +40,7 @@ platform = espressif32
 board = az-delivery-devkit-v4
 lib_deps =
     ${env.lib_deps}
-    esphome/AsyncTCP-esphome
+    esphome/AsyncTCP-esphome@2.0.0
 board_build.partitions = platforms/esp32/partitions.csv
 build_flags = ${env.build_flags} -DCORE_DEBUG_LEVEL=5 -DDEV=true
 
