--- a/.github/workflows/build-firmware.yaml
+++ b/.github/workflows/build-firmware.yaml
@@ -1,38 +1,7 @@
 name: Build Firmware
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 on:
-  push:
-    branches:
-    - main
-    paths-ignore:
-    - enclosure/**
-    - frontend/**
-    - gerbers/**
-    - kicad/**
-    - pics/**
-    - pdfs/**
-    - .gitattributes
-    - .gitignore
-    - '**/*.md'
-    - '**/*.csv'
-    - '!.github/workflows/build-firmware.yaml'
-  pull_request:
-    paths-ignore:
-    - enclosure/**
-    - frontend/**
-    - gerbers/**
-    - kicad/**
-    - pics/**
-    - pdfs/**
-    - .gitattributes
-    - .gitignore
-    - '**/*.md'
-    - '**/*.csv'
-    - '!.github/workflows/build-firmware.yaml'
+  workflow_call:
 
 jobs:
   build-frontend:
@@ -121,7 +90,7 @@ jobs:
 
     - uses: actions/upload-artifact@v3
       with:
-        name: SnekSafe-${{ matrix.platform }}-${{ steps.versions.outputs.FRONTEND_VERSION }}-${{ github.run_number }}-firmware.bin
+        name: SnekSafe-${{ matrix.platform }}-${{ steps.versions.outputs.FIRMWARE_VERSION }}-${{ github.run_number }}-firmware.bin
         path: firmware/.pio/build/${{ matrix.platform }}/firmware.bin
         if-no-files-found: error
         retention-days: 1
