fw: ci: reuse build

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -15,13 +15,18 @@ data_dir = ../frontend/dist
 framework = arduino
 check_skip_packages = yes
 lib_deps =
+    # renovate: datasource=github-releases depName=esphome/ESPAsyncWebServer
     esphome/ESPAsyncWebServer-esphome@3.0.0
+    # renovate: datasource=github-releases
     bblanchon/ArduinoJson@6.21.2
+    # renovate: datasource=github-releases
     arduino-libraries/NTPClient@3.2.1
-    https://github.com/dfrobot/DFRobot_SHT3x.git
+    https://github.com/dfrobot/DFRobot_SHT3x.git@1.0.0+sha.f5fc122
+    # renovate: datasource=github-releases
     PowerBroker2/ArduPID@0.2.0
-    SPI@2.0.0
+    # renovate: datasource=github-releases
     fbiego/ESP32Time@2.0.0
+    # renovate: datasource=github-releases
     PowerBroker2/FireTimer@1.0.5
 board_build.filesystem = littlefs
 build_flags = !python scripts/git_version_macro.py
@@ -29,18 +34,14 @@ build_flags = !python scripts/git_version_macro.py
 [env:esp32]
 platform = espressif32
 board = az-delivery-devkit-v4
-lib_deps =
-    ${env.lib_deps}
-    esphome/AsyncTCP-esphome@2.0.0
+lib_deps = ${env.lib_deps}
 board_build.partitions = platforms/esp32/partitions.csv
 build_flags = ${env.build_flags}
 
 [env:esp32dev]
 platform = espressif32
 board = az-delivery-devkit-v4
-lib_deps =
-    ${env.lib_deps}
-    esphome/AsyncTCP-esphome@2.0.0
+lib_deps = ${env:esp32.lib_deps}
 board_build.partitions = platforms/esp32/partitions.csv
 build_flags = ${env.build_flags} -DCORE_DEBUG_LEVEL=5 -DDEV=true
 
