--- a/.github/workflows/release-firmware.yaml
+++ b/.github/workflows/release-firmware.yaml
@@ -5,83 +5,26 @@ on:
     tags:
       - "v*"
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  build-frontend:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: "20.2"
-
-    - name: Install Dependencies
-      run: |
-        cd frontend
-        npm ci
-
-    - name: Build Frontend
-      run: |
-        cd frontend
-        npm run build
-
-    - uses: actions/upload-artifact@v3
-      with:
-        name: frontend
-        path: frontend/dist
-        if-no-files-found: error
-        retention-days: 1
-
   build-firmware:
-    runs-on: ubuntu-latest
-    needs: build-frontend
+    uses: ./.github/workflows/build-firmware.yaml
 
-    strategy:
-      matrix:
-        platform:
-        - esp32
-        - esp32dev
+  create-release:
+    runs-on: ubuntu-latest
+    needs: build-firmware
 
     steps:
-    - uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cache/pip
-          ~/.platformio/.cache
-          firmware/.pio/libdeps
-        key: ${{ runner.os }}-pio-${{ matrix.platform }}-${{ hashFiles('firmware/platformio.ini') }}
-
-    - uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-
-    - name: Install PlatformIO Core
-      run: pip install --upgrade platformio
-
     - uses: actions/checkout@v3
-
-    - name: Copy built frontend
-      uses: actions/download-artifact@v3
-      with:
-        name: frontend
-        path: frontend/dist
 
     - name: Set Versions
       run: |
         echo "FRONTEND_VERSION=$(cat frontend/package.json | jq -r .version)" >> $GITHUB_OUTPUT
         echo "FIRMWARE_VERSION=$(cat firmware/.version)" >> $GITHUB_OUTPUT
       id: versions
-
-    - name: Build ${{ matrix.platform }} Frontend
-      run: |
-        cd firmware
-        pio run --target buildfs -e ${{ matrix.platform }}
-
-    - name: Build ${{ matrix.platform }} Firmware
-      run: |
-        cd firmware
-        pio run -e ${{ matrix.platform }}
 
     - name: Create Release
       id: create_release
@@ -90,17 +33,65 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ steps.versions.outputs.FIRMWARE_VERSION }}-${{ github.run_number }}
-        release_name: "SnekSafe FW ${{ steps.versions.outputs.FIRMWARE_VERSION }} FE - ${{ steps.versions.outputs.FRONTEND_VERSION }} Build #${{ github.run_number }}"
+        release_name: "SnekSafe FW ${{ steps.versions.outputs.FIRMWARE_VERSION }}, FE v${{ steps.versions.outputs.FRONTEND_VERSION }} Build #${{ github.run_number }}"
         draft: false
         prerelease: false
+
+    - name: Save release upload url to artifacts
+      run: |
+        echo "RELEASE_UPLOAD_URL=${{ steps.create_release.outputs.upload_url }}" > upload_url
+
+    - uses: actions/upload-artifact@v3
+      with:
+        name: upload_url
+        path: upload_url
+        if-no-files-found: error
+        retention-days: 1
+
+  upload-release:
+    runs-on: ubuntu-latest
+    needs: create-release
+
+    strategy:
+      matrix:
+        platform:
+        - esp32
+        - esp32dev
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Copy upload url
+      uses: actions/download-artifact@v3
+      with:
+        name: upload_url
+
+    - name: Set Versions
+      run: |
+        echo "FRONTEND_VERSION=$(cat frontend/package.json | jq -r .version)" >> $GITHUB_OUTPUT
+        echo "FIRMWARE_VERSION=$(cat firmware/.version)" >> $GITHUB_OUTPUT
+        echo "UPLOAD_URL=$(cat upload_url)" >> $GITHUB_OUTPUT
+      id: versions
+
+    - name: Copy built frontend
+      uses: actions/download-artifact@v3
+      with:
+        name: SnekSafe-${{ matrix.platform }}-${{ steps.versions.outputs.FRONTEND_VERSION }}-${{ github.run_number }}-frontend.bin
+        path: SnekSafe-${{ matrix.platform }}-${{ steps.versions.outputs.FRONTEND_VERSION }}-${{ github.run_number }}-frontend.bin
+
+    - name: Copy built firmware
+      uses: actions/download-artifact@v3
+      with:
+        name: SnekSafe-${{ matrix.platform }}-${{ steps.versions.outputs.FIRMWARE_VERSION }}-${{ github.run_number }}-firmware.bin
+        path: SnekSafe-${{ matrix.platform }}-${{ steps.versions.outputs.FIRMWARE_VERSION }}-${{ github.run_number }}-firmware.bin
 
     - name: Upload Firmware
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: firmware/.pio/build/${{ matrix.platform }}/firmware.bin
+        upload_url: ${{ steps.versions.outputs.UPLOAD_URL }}
+        asset_path: SnekSafe-${{ matrix.platform }}-${{ steps.versions.outputs.FIRMWARE_VERSION }}-${{ github.run_number }}-firmware.bin
         asset_name: SnekSafe-${{ matrix.platform }}-${{ steps.versions.outputs.FIRMWARE_VERSION }}-${{ github.run_number }}-firmware.bin
         asset_content_type: application/octet-stream
 
@@ -109,7 +100,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: firmware/.pio/build/${{ matrix.platform }}/littlefs.bin
+        upload_url: ${{ steps.versions.outputs.UPLOAD_URL }}
+        asset_path: SnekSafe-${{ matrix.platform }}-${{ steps.versions.outputs.FRONTEND_VERSION }}-${{ github.run_number }}-frontend.bin
         asset_name: SnekSafe-${{ matrix.platform }}-${{ steps.versions.outputs.FRONTEND_VERSION }}-${{ github.run_number }}-frontend.bin
         asset_content_type: application/octet-stream
