--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,6 +2,17 @@
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": [
         "local>USA-RedDragon/renovate-configs",
+        "local>USA-RedDragon/renovate-configs:golang",
         "local>USA-RedDragon/renovate-configs:actions-node-version"
+    ],
+    "regexManagers": [
+        {
+            "fileMatch": [
+                "(^|/)firmware\\/platformio\\.ini$"
+            ],
+            "matchStrings": [
+                "# renovate: datasource=(?<datasource>.+)\\n\\s+(?<depName>.+)@(?<currentValue>([0-9]+\\.[0-9]+\\.[0-9]+))"
+            ]
+        }
     ]
 }
