--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -14,6 +14,8 @@ data_dir = ../frontend/dist
 [env]
 framework = arduino
 check_skip_packages = yes
+extra_scripts = pre:certs/gen_certs_task.py
+board_build.embed_files = certs/x509_crt_bundle.bin
 lib_deps =
     # renovate: datasource=github-releases depName=esphome/ESPAsyncWebServer
     esphome/ESPAsyncWebServer-esphome@3.0.0
@@ -36,6 +38,8 @@ build_flags = !python scripts/git_version_macro.py
 platform = https://github.com/platformio/platform-espressif32#v6.3.1
 board = az-delivery-devkit-v4
 lib_deps = ${env.lib_deps}
+extra_scripts = ${env.extra_scripts}
+board_build.embed_files = ${env.board_build.embed_files}
 board_build.partitions = platforms/esp32/partitions.csv
 build_flags = ${env.build_flags}
 
@@ -43,6 +47,8 @@ build_flags = ${env.build_flags}
 platform = ${env:esp32.platform}
 board = az-delivery-devkit-v4
 lib_deps = ${env:esp32.lib_deps}
+extra_scripts = ${env:esp32.extra_scripts}
+board_build.embed_files = ${env:esp32.board_build.embed_files}
 board_build.partitions = platforms/esp32/partitions.csv
 build_flags = ${env.build_flags} -DCORE_DEBUG_LEVEL=5 -DDEV=true
 
@@ -50,6 +56,8 @@ build_flags = ${env.build_flags} -DCORE_DEBUG_LEVEL=5 -DDEV=true
 platform = ${env:esp32dev.platform}
 board = ${env:esp32dev.board}
 lib_deps = ${env:esp32dev.lib_deps}
+extra_scripts = ${env:esp32dev.extra_scripts}
+board_build.embed_files = ${env:esp32dev.board_build.embed_files}
 board_build.partitions = ${env:esp32dev.board_build.partitions}
 build_flags = ${env:esp32dev.build_flags}
 upload_protocol = espota
