--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -48,7 +48,7 @@ board = az-delivery-devkit-v4
 lib_deps = ${env:esp32.lib_deps}
 extra_scripts = ${env:esp32.extra_scripts}
 board_build.embed_files = ${env:esp32.board_build.embed_files}
-build_flags = ${env.build_flags} -DCORE_DEBUG_LEVEL=5 -DDEV=true
+build_flags = !python scripts/git_version_macro.py dev
 
 [env:esp32dev-ota]
 platform = ${env:esp32dev.platform}
