--- a/.github/workflows/kibot.yaml
+++ b/.github/workflows/kibot.yaml
@@ -15,6 +15,7 @@ on:
 jobs:
   kibot:
     runs-on: ubuntu-latest
+    container: ghcr.io/inti-cmnb/kicad7_auto:latest
     steps:
     - uses: actions/checkout@v3
     - name: Cache 3D models data
