--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,7 +11,7 @@
                 "(^|/)firmware\\/platformio\\.ini$"
             ],
             "matchStrings": [
-                "# renovate: datasource=(?<datasource>.*?)\\s*?(depName=(?<depNameOverride>.*?))?\\n(platform = )?(?<depName>.+)[@#](?<currentValue>(v?[0-9]+\\.[0-9]+\\.[0-9]+))"
+                "# renovate: datasource=(?<datasource>.*?)\\s*?(depName=(?<depNameOverride>.*?))?( versioning=(?<versioning>.*?))?\\s.*?\\n(platform = )?(?<depName>.+)[@#](?<currentValue>(v?[0-9]+\\.[0-9]+\\.[0-9]+))"
             ],
             "depNameTemplate": "{{#if depNameOverride}}{{{depNameOverride}}}{{else}}{{{depName}}}{{/if}}"
         }
