platformio.ini: update versioning

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -17,18 +17,18 @@ check_skip_packages = yes
 extra_scripts = pre:certs/gen_certs_task.py
 board_build.embed_files = certs/x509_crt_bundle.bin
 lib_deps =
-    # renovate: datasource=github-releases depName=esphome/ESPAsyncWebServer
+    # renovate: datasource=github-releases depName=esphome/ESPAsyncWebServer versioning=node
     esphome/ESPAsyncWebServer-esphome@3.0.0
-    # renovate: datasource=github-releases
+    # renovate: datasource=github-releases versioning=node
     bblanchon/ArduinoJson@6.21.2
-    # renovate: datasource=github-releases
+    # renovate: datasource=github-releases versioning=node
     arduino-libraries/NTPClient@3.2.1
     https://github.com/dfrobot/DFRobot_SHT3x.git@1.0.0+sha.f5fc122
-    # renovate: datasource=github-releases
+    # renovate: datasource=github-releases versioning=node
     PowerBroker2/ArduPID@0.2.0
-    # renovate: datasource=github-releases
+    # renovate: datasource=github-releases versioning=node
     fbiego/ESP32Time@2.0.0
-    # renovate: datasource=github-releases
+    # renovate: datasource=github-releases versioning=node
     PowerBroker2/FireTimer@1.0.5
 board_build.filesystem = littlefs
 build_flags = !python scripts/git_version_macro.py
