--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -13,6 +13,7 @@
             "matchStrings": [
                 "# renovate: datasource=(?<datasource>.*?)\\s*?(depName=(?<depNameOverride>.*?))?( versioning=(?<versioning>.*?))?\\s.*?\\n(platform = )?(?<depName>.+)[@#](?<currentValue>(v?[0-9]+\\.[0-9]+\\.[0-9]+))"
             ],
+            "extractVersionTemplate": "^Release (?<version>.*)$",
             "depNameTemplate": "{{#if depNameOverride}}{{{depNameOverride}}}{{else}}{{{depName}}}{{/if}}"
         }
     ]
