--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,9 +11,18 @@
                 "(^|/)firmware\\/platformio\\.ini$"
             ],
             "matchStrings": [
-                "# renovate: datasource=(?<datasource>.*?)\\s*?(depName=(?<depNameOverride>.*?))?\\n(platform = )?(?<depName>.+)[@#](?<currentValue>(v?[0-9]+\\.[0-9]+\\.[0-9]+))"
+                "# renovate: v: datasource=(?<datasource>.*?)\\s*?(depName=(?<depNameOverride>.*?))?\\n(platform = )?(?<depName>.+)[@#](?<currentValue>(v?[0-9]+\\.[0-9]+\\.[0-9]+))"
             ],
             "extractVersionTemplate": "^v(?<version>.*)$",
+            "depNameTemplate": "{{#if depNameOverride}}{{{depNameOverride}}}{{else}}{{{depName}}}{{/if}}"
+        },
+        {
+            "fileMatch": [
+                "(^|/)firmware\\/platformio\\.ini$"
+            ],
+            "matchStrings": [
+                "# renovate: datasource=(?<datasource>.*?)\\s*?(depName=(?<depNameOverride>.*?))?\\n(platform = )?(?<depName>.+)[@#](?<currentValue>(v?[0-9]+\\.[0-9]+\\.[0-9]+))"
+            ],
             "depNameTemplate": "{{#if depNameOverride}}{{{depNameOverride}}}{{else}}{{{depName}}}{{/if}}"
         }
     ]
