--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -17,9 +17,9 @@ check_skip_packages = yes
 extra_scripts = pre:certs/gen_certs_task.py
 board_build.embed_files = certs/x509_crt_bundle.bin
 lib_deps =
-    # renovate: datasource=github-releases depName=esphome/ESPAsyncWebServer
+    # renovate: v: datasource=github-releases depName=esphome/ESPAsyncWebServer
     esphome/ESPAsyncWebServer-esphome@3.0.0
-    # renovate: datasource=github-releases
+    # renovate: v: datasource=github-releases
     bblanchon/ArduinoJson@6.21.2
     # renovate: datasource=github-releases
     arduino-libraries/NTPClient@3.2.1
