--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,22 +8,12 @@
     "regexManagers": [
         {
             "fileMatch": [
-                "(^|/)firmware\\/platformio\\.ini$"
+                "(^|/)\\.github\\/workflows\\/.*\\.ya?ml$"
             ],
             "matchStrings": [
-                "# renovate: v: datasource=(?<datasource>.*?)\\s*?(depName=(?<depNameOverride>.*?))?\\n\\s*?(platform = )?\\s*?(?<depName>[a-zA-Z].+)[@#](?<currentValue>(v?[0-9]+\\.[0-9]+\\.[0-9]+))"
+                "# renovate: datasource=(?<datasource>.*?)(?:\\s+extractVersion=(?<extractVersion>.+?))?(?:\\s+versioning=(?<versioning>.+?))?\\s+depName=(?<depName>.+?)?\\s(?:\\s*.*_(?:version|VERSION)[:=]\\s*(?<currentValue>.*))?(?:\\s.*_(?:ref|REF):\\s+(?<currentDigest>.*))?"
             ],
-            "extractVersionTemplate": "^v(?<version>.*)$",
-            "depNameTemplate": "{{#if depNameOverride}}{{{depNameOverride}}}{{else}}{{{depName}}}{{/if}}"
-        },
-        {
-            "fileMatch": [
-                "(^|/)firmware\\/platformio\\.ini$"
-            ],
-            "matchStrings": [
-                "# renovate: datasource=(?<datasource>.*?)\\s*?(depName=(?<depNameOverride>.*?))?\\s*?\\n(platform = )?\\s*?(?<depName>[a-zA-Z].+)[@#](?<currentValue>(v?[0-9]+\\.[0-9]+\\.[0-9]+))"
-            ],
-            "depNameTemplate": "{{#if depNameOverride}}{{{depNameOverride}}}{{else}}{{{depName}}}{{/if}}"
+            "versioningTemplate": "{{#if versioning}}{{versioning}}{{else}}semver-coerced{{/if}}"
         }
     ],
     "packageRules": [
