--- a/.github/workflows/pr-firmware.yaml
+++ b/.github/workflows/pr-firmware.yaml
@@ -4,14 +4,23 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  # renovate: datasource=github-releases depName=esphome/esphome
+  ESPHOME_VERSION: 2023.11.0
+
 on:
   push:
     paths:
     - firmware/**
-    - .github/workflows/build-firmware.yaml
     - .github/workflows/pr-firmware.yaml
   pull_request:
 
 jobs:
   build-firmware:
-    uses: ./.github/workflows/reusable-build-firmware.yaml
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: esphome/build-action@v1.8.0
+      with:
+        yaml_file: firmware/sneksafe.esphome.yaml
+        version: ${{ env.ESPHOME_VERSION }}
