--- a/.github/workflows/release-firmware.yaml
+++ b/.github/workflows/release-firmware.yaml
@@ -48,7 +48,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ${{ steps.build.outputs.name }}.bin
+        asset_path: ${{ steps.build.outputs.name }}/${{ steps.build.outputs.name }}.bin
         asset_name: SnekSafe-esp32-${{ steps.versions.outputs.FIRMWARE_VERSION }}-firmware.bin
         asset_content_type: application/octet-stream
 
@@ -58,6 +58,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: manifest.json
+        asset_path: ${{ steps.build.outputs.name }}/manifest.json
         asset_name: SnekSafe-esp32-${{ steps.versions.outputs.FIRMWARE_VERSION }}-manifest.json
         asset_content_type: application/json
