--- a/.github/workflows/pr-firmware.yaml
+++ b/.github/workflows/pr-firmware.yaml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   build-firmware:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
     - uses: esphome/build-action@v1.8.0
