ci: pr-close-kicad-delete-page: ubuntu 22.04

--- a/.github/workflows/pr-close-kicad-delete-page.yaml
+++ b/.github/workflows/pr-close-kicad-delete-page.yaml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   kiri-delete:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Kiri
       uses: usa-reddragon/kiri-github-action@v1
