ci: kibot: ubuntu 22.04

--- a/.github/workflows/kibot.yaml
+++ b/.github/workflows/kibot.yaml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   kibot:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     container: ghcr.io/inti-cmnb/kicad7_auto:latest@sha256:a0b25cefcc5ae0da4fb51168a9310897306d4d24d8f36e6237c67e789acd8f82
     steps:
     - uses: actions/checkout@v4
